--- a/app/src/main/res/layout/activity_client_detail.xml
+++ b/app/src/main/res/layout/activity_client_detail.xml
@@ -19,5 +19,5 @@
             android:layout_height="match_parent"
             android:padding="16dp"
             android:textIsSelectable="true"
-            tools:context="smartdoor.ClientDetailFragment"/>
+            tools:context="smartdoor.ClientDetailActivity"/>
 </TableLayout>
