--- a/app/src/main/res/layout/activity_client_detail.xml
+++ b/app/src/main/res/layout/activity_client_detail.xml
@@ -16,8 +16,36 @@
             android:id="@+id/client_detail"
             style="?android:attr/textAppearanceLarge"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:padding="16dp"
             android:textIsSelectable="true"
             tools:context="smartdoor.ClientDetailActivity"/>
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" >
+
+                <Button
+                    android:id="@+id/opendoor_button"
+                    android:text="Open Door"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="200dp" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/history_button"
+                    android:text="History"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_marginEnd="200dp" />
+        </TableRow>
+
 </TableLayout>
